<project xmlns:pom="http://maven.apache.org/POM/4.0.0">
	<modelVersion>4.0.0</modelVersion>
	<groupId>sample-framework</groupId>
	<artifactId>start-web</artifactId>
	<version>live</version>
	<build>
	 <plugins>
	  <plugin>
	   <groupId>org.apache.maven.plugins</groupId>
	   <artifactId>maven-compiler-plugin</artifactId>
	   <version>3.11.0</version>
	   <configuration>
	    <compilerArgs>
	     <arg>--enable-preview</arg>
	    </compilerArgs>
	   </configuration>
	  </plugin>
	 </plugins>
	 <sourceDirectory>code</sourceDirectory>
		<testSourceDirectory>test</testSourceDirectory>
	</build>
	<properties>
		<maven.compiler.source>23</maven.compiler.source>
		<maven.compiler.target>23</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.apache.tomcat.embed</groupId>
			<artifactId>tomcat-embed-core</artifactId>
			<version>RELEASE</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>RELEASE</version>
		</dependency>
		<dependency>
			<groupId>jakarta.json</groupId>
			<artifactId>jakarta.json-api</artifactId>
			<version>RELEASE</version>
		</dependency>
		<dependency>
			<groupId>jakarta.mail</groupId>
			<artifactId>jakarta.mail-api</artifactId>
			<version>RELEASE</version>
		</dependency>
	</dependencies>
</project>
